kubernetes/apps/monitoring/kube-prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "Grafana"
  name: grafana-ui
  namespace: monitoring
spec:
  hostnames: ["grafana.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "Prometheus"
  name: prometheus-ui
  namespace: monitoring
spec:
  hostnames: ["prometheus.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          namespace: monitoring
          port: 9090
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "Alert Manager"
  name: alertmanager-ui
  namespace: monitoring
spec:
  hostnames: ["alertmanager.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          namespace: monitoring
          port: 9093
      matches:
        - path:
            type: PathPrefix
            value: /
